fix content overflow and scroll issue (attempt #2)

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -110,7 +110,8 @@
     background-color: inherit;
     color: var(--color-text);
     font-family: var(--font-content);
-    height: 100%;
+    height: calc(100vh - 3.5rem);
+    height: calc((var(--vh, 1vh) * 100) - 3.5rem);
     margin: auto;
     padding: 1rem 15%;
     overflow-y: auto;
